<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/EditTextUserLoginAccount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/mobile"
            android:inputType="number"
            android:textColor="#666666"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/EditTextUserLoginPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#666666"
            android:textSize="22dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="40px"
        android:layout_marginTop="5dp" >

        <CheckBox
            android:id="@+id/save_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="记住密码"
            android:textColor="#fc6d02"
            android:textSize="15dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/ButtonUserLoginConfirme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="22dp"
        android:textColor="#ffffff"
        android:layout_marginRight="22dp"
        android:background="@drawable/rectangle_button_orange_selector"
        android:text="@string/string_register"
        android:textSize="22dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp" >

        <Button
            android:id="@+id/free_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:text="@string/free_login"
            android:textColor="#fc6d02"
            android:textSize="22dp" />

        <Button
            android:id="@+id/backPassword_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:text="@string/back_password"
            android:textColor="#fc6d02"
            android:textSize="22dp" />
    </RelativeLayout>

</LinearLayout>